compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__assert__assert_literal.snap
---
source: compiler-core/src/erlang/tests/assert.rs
expression: "\npub fn main() {\n  assert False\n}\n"
---
----- SOURCE CODE

pub fn main() {
  assert False
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> nil.
main() ->
    case false of
    true -> nil;
    false -> erlang:error(#{gleam_error => assert,
            message => <<"Assertion failed."/utf8>>,
            file => <<?FILEPATH/utf8>>,
            module => <<"my/mod"/utf8>>,
            function => <<"main"/utf8>>,
            line => 3,
            kind => expression,
            expression => #{kind => literal,
                value => false,
                start => 26,
                'end' => 31
                },
            start => 19,
            'end' => 31,
            expression_start => 26})
end.
